fix: Remove footer and header stretching

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -6,6 +6,12 @@
     width: 100%;
 }
 
+@media screen and (max-width:1024px) {
+    .footer {
+        max-width: 582px;
+    }
+}
+
 @media screen and (max-width:768px) {
     .footer {
         margin-top: 48px;
